--- a/src/includes/webmentions.njk
+++ b/src/includes/webmentions.njk
@@ -1,34 +1,5 @@
 {%- set postMentions = webmentions | webmentionsForPage -%}
-<article id="webmentions" class="[ webmentions ]">
-	<header class="[ webmentions-header ][ flow ]">
-		<h2>
-			{{ postMentions.total }} Response{%- if (postMentions.total !== 1) -%}s{%- endif -%}
-		</h2>
-		<form action="https://webmention.io/{{ site.url }}/webmention" method="post" class="[ webmentions-form ][ flow ]">
-			<label for="form-webmention-source">
-				Have you published your own post mentioning this one? Let me know the URL:
-			</label>
-			<div class="[ input-wrapper ]">
-				<input
-						id="form-webmention-source"
-						type="url"
-						name="source"
-						placeholder="https://example.com"
-						required="required"
-						class="[ input ]">
-				<input type="hidden" name="target" value="{{ site.url }}{{ page.url }}">
-				<button>Send</button>
-			</div>
-		</form>
-		<small>
-			Powered by
-			<a href="https://indieweb.org/Webmention">Webmentions</a>
-			via
-			<a href="https://webmention.io">Webmention.io</a>
-			and
-			<a href="https://brid.gy">Bridgy</a>
-		</small>
-	</header>
+<article id="webmentions" class="[ webmentions ][ flow ]">
 	{%- ifAsync postMentions.likes.length -%}
 	<h3>
 		{%- if postMentions.likes.length === 1 -%}
@@ -52,17 +23,45 @@
 {%- include "webmentions-facepile.njk" -%}
 {%- endif -%}
 {%- if postMentions.comments.length -%}
-<h3>
-	{%- if postMentions.comments.length === 1 -%}
-		{{ postMentions.comments.length }} Comment
+<details>
+	<summary>
+		{%- if postMentions.comments.length === 1 -%}
+			{{ postMentions.comments.length }} Comment
 			{%- elif (postMentions.comments.length > 1) -%}
-		{{ postMentions.comments.length }} Comments
+			{{ postMentions.comments.length }} Comments
 			{%- endif -%}
-</h3>
-<ol>
-	{%- asyncEach mention in postMentions.comments -%}
-	{%- include "webmention.njk" -%}
-	{%- endeach -%}
-</ol>
+	</summary>
+	<ol class="[ flow ]">
+		{%- asyncEach mention in postMentions.comments -%}
+		{%- include "webmention.njk" -%}
+		{%- endeach -%}
+	</ol>
+</details>
 {%- endif -%}
+<footer class="[ webmentions-header ][ flow ]">
+<form action="https://webmention.io/{{ site.url }}/webmention" method="post" class="[ webmentions-form ][ flow ]">
+	<label for="form-webmention-source">
+					Have you published your own post mentioning this one? Let me know the URL:
+				</label>
+	<div class="[ input-wrapper ]">
+		<input
+							id="form-webmention-source"
+							type="url"
+							name="source"
+							placeholder="https://example.com"
+							required="required"
+							class="[ input ]">
+		<input type="hidden" name="target" value="{{ site.url }}{{ page.url }}">
+		<button>Send</button>
+	</div>
+</form>
+<small>
+				Powered by
+				<a href="https://indieweb.org/Webmention">Webmentions</a>
+				via
+				<a href="https://webmention.io">Webmention.io</a>
+				and
+				<a href="https://brid.gy">Bridgy</a>
+</small>
+</footer>
 </article>
