--- a/src/css/blocks/webmentions.css
+++ b/src/css/blocks/webmentions.css
@@ -1,31 +1,45 @@
 .webmentions {
+  inline-size: fit-content;
+  margin-inline: auto;
+
   & .input-wrapper {
     display: flex;
     gap: var(--size-3);
     flex-wrap: wrap;
   }
 
+  & details {
+    block-size: fit-content;
+
+    & > summary {
+      font-size: var(--font-size-fluid-1);
+    }
+
+    &[open] > summary {
+      margin-bottom: 0;
+    }
+  }
+
   & ol {
     padding-left: 0;
-    /* list-style-type: none; */
-    padding-block: var(--size-2);
+    list-style-type: none;
+    padding-block: var(--size-4);
 
     & li {
       padding-left: 0;
-
-      &::marker {
-        content: url(https://webmention.io/avatar/pbs.twimg.com/c2c8dfc64df0e49669c4493f074e0311c7081b9ab09fadb44172afa4ca9beca4.jpg);
-        display: block;
-        border-radius: var(--radius-round);
-        width: 2em;
-        height: auto;
-      }
+      max-inline-size: unset;
     }
   }
 
   & .webmention {
+    --flow-space: 1.5em;
     --_offset: calc(2em + var(--size-2));
     padding-left: var(--_offset);
+
+    &:not(:first-child) {
+      border-top: 1px solid var(--neutral-2);
+      padding-top: var(--flow-space);
+    }
 
     & > * {
       --flow-space: 0.5em;
