--- a/src/index.njk
+++ b/src/index.njk
@@ -60,3 +60,5 @@ description: Hi, I’m Elly. I like creating delightful, magical, and accessible
 	{%- endfor %}
 	{% endfeedBlock %}
 </div>
+
+{%- include "webmentions.njk" -%}
