📝 content: obsidian commit

--- a/src/includes/footer.njk
+++ b/src/includes/footer.njk
@@ -45,6 +45,11 @@
 					</sl-tooltip>
 				</li>
 				<li>
+					<sl-tooltip content="Mastodon">
+						<sl-icon-button library="fa" name="fab-mastodon" label="Mastodon" href="https://tech.lgbt/@ellyloel"></sl-icon-button>
+					</sl-tooltip>
+				</li>
+				<li>
 					<sl-tooltip content="Twitter">
 						<sl-icon-button library="fa" name="fab-twitter" label="Twitter" href="https://elly.to/twitter"></sl-icon-button>
 					</sl-tooltip>
