--- a/src/layouts/post.njk
+++ b/src/layouts/post.njk
@@ -83,7 +83,9 @@ layout: base-without-header.njk
 <footer class="[ content-footer ][ flow flow-space-setter ]" style="--flow-space-setter: var(--size-8);">
 	<div class="[ share ]">
 		<p>
-			<sl-icon class="[ icon ]" library="fa" name="fas-share-from-square" label=""></sl-icon> Share on <a href='https://twitter.com/intent/tweet?url={{ site.url }}{{ page.url }}&text="{{ title }}" by @ellyloel' class="[ text-decoration-none move-link-styling-to-child ]">
+			<sl-icon class="[ icon ]" library="fa" name="fas-share-from-square" label=""></sl-icon> Share on <a href='https://toot.kytta.dev/?text="{{ title }}" by @ellyloel@tech.lgbt {{ site.url }}{{ page.url }}' class="[ text-decoration-none move-link-styling-to-child ]">
+				<sl-icon class="[ icon ]" library="fa" name="fab-mastodon" label=""></sl-icon>
+				<span>Mastodon</span></a>, <a href='https://twitter.com/intent/tweet?url={{ site.url }}{{ page.url }}&text="{{ title }}" by @ellyloel' class="[ text-decoration-none move-link-styling-to-child ]">
 				<sl-icon class="[ icon ]" library="fa" name="fab-twitter" label=""></sl-icon>
 				<span>Twitter</span></a> or <a href="https://www.linkedin.com/sharing/share-offsite/?url={{ site.url }}{{ page.url }}" class="[ text-decoration-none move-link-styling-to-child ]">
 				<sl-icon class="[ icon ]" library="fa" name="fab-linkedin" label=""></sl-icon>
