📝 content: obsidian commit

--- a/src/includes/footer.njk
+++ b/src/includes/footer.njk
@@ -46,7 +46,7 @@
 				</li>
 				<li>
 					<sl-tooltip content="Mastodon">
-						<sl-icon-button library="fa" name="fab-mastodon" label="Mastodon" href="https://tech.lgbt/@ellyloel"></sl-icon-button>
+						<sl-icon-button library="fa" name="fab-mastodon" label="Mastodon" href="https://front-end.social/@elly"></sl-icon-button>
 					</sl-tooltip>
 				</li>
 				<li>
