--- a/src/includes/meta.njk
+++ b/src/includes/meta.njk
@@ -51,5 +51,6 @@ generateManifest = false %}
 {# Webmentions #}
 <link href="https://github.com/ellyloel" rel="me">
 <link href="https://tech.lgbt/@ellyloel" rel="me">
+<link href="https://front-end.social/@elly" rel="me">
 <link rel="webmention" href="https://webmention.io/www.ellyloel.com/webmention"/>
 <link rel="pingback" href="https://webmention.io/www.ellyloel.com/xmlrpc"/>
