--- a/src/includes/footer.njk
+++ b/src/includes/footer.njk
@@ -51,7 +51,7 @@
 				</li>
 				<li>
 					<sl-tooltip content="Twitter">
-						<sl-icon-button library="fa" name="fab-twitter" label="Twitter" href="https://elly.to/twitter"></sl-icon-button>
+						<sl-icon-button library="fa" name="fab-twitter" label="Twitter" href="https://twitter.ellyloel.com"></sl-icon-button>
 					</sl-tooltip>
 				</li>
 				<li>
