--- a/src/layouts/base-without-header.njk
+++ b/src/layouts/base-without-header.njk
@@ -42,7 +42,7 @@
 		<!-- Include scripts here. Concatenate & minify for performance: https://developers.google.com/speed/docs/insights/MinifyResources -->
 		<script type="module" src="/@input/js/main.js" defer></script>
 		{%- if page.url === "/" -%}
-			<script type="module" src="/@input/js/spline.js" defer></script>
+			<script type="module" src="/@input/js/model-viewer.js" defer></script>
 		{%- endif -%}
 		{%- if page.url === "/garden/" or page.url === "/blog/" or page.url === "/projects/" or page.url === "/bookmarks/" or page.url === "/til/" or page.url === "/til/d3/" -%}
 			<script type="module" src="/@input/js/graph.js" defer></script>
