--- a/src/css/blocks/breadcrumb.css
+++ b/src/css/blocks/breadcrumb.css
@@ -1,35 +1,41 @@
-sl-breadcrumb-item {
-  &::part(label) {
-    color: var(--link);
-    outline-offset: 0px;
-    transition-property: color;
-    transition-duration: 145ms;
-    transition-timing-function: var(--ease-2);
-
-    &:hover {
-      color: var(--link-visited);
-    }
-
-    &:focus-visible {
-      outline: 2px solid var(--link);
-      outline-offset: var(--size-1);
-    }
-
-    @media (prefers-reduced-motion: no-preference) {
-      transition-property: color, outline-offset;
-    }
+sl-breadcrumb {
+  &::part(base) {
+    display: inline-flex;
   }
 
-  &:not([data-state="active"])::part(label):not(:hover, :focus-visible) {
-    text-decoration: underline;
-  }
+  & sl-breadcrumb-item {
+    &::part(label) {
+      color: var(--link);
+      outline-offset: 0px;
+      transition-property: color;
+      transition-duration: 145ms;
+      transition-timing-function: var(--ease-2);
 
-  &[data-state="active"]::part(label) {
-    font-weight: var(--font-weight-bold, 622);
-  }
+      &:hover {
+        color: var(--link-visited);
+      }
 
-  &::part(prefix),
-  &::part(separator) {
-    color: var(--accent-text);
+      &:focus-visible {
+        outline: 2px solid var(--link);
+        outline-offset: var(--size-1);
+      }
+
+      @media (prefers-reduced-motion: no-preference) {
+        transition-property: color, outline-offset;
+      }
+    }
+
+    &:not([data-state="active"])::part(label):not(:hover, :focus-visible) {
+      text-decoration: underline;
+    }
+
+    &[data-state="active"]::part(label) {
+      font-weight: var(--font-weight-bold, 622);
+    }
+
+    &::part(prefix),
+    &::part(separator) {
+      color: var(--accent-text);
+    }
   }
 }
