--- a/src/layouts/base.njk
+++ b/src/layouts/base.njk
@@ -1,7 +1,7 @@
 ---
 layout: base-without-header.njk
 ---
-<header>
+<header class="[ main-header ]">
 	{%- include "breadcrumb.njk" -%}
 	<h1>{{ title }}</h1>
 </header>
