📝 content: obsidian commit

--- a/src/css/blocks/breadcrumb.css
+++ b/src/css/blocks/breadcrumb.css
@@ -4,6 +4,10 @@ sl-breadcrumb {
   }
 
   & sl-breadcrumb-item {
+    &::part(base) {
+      white-space: revert;
+    }
+
     &::part(label) {
       color: var(--link);
       outline-offset: 0px;
