🐛 fix: switching newsletter form over to buttondown

--- a/src/css/blocks/newsletter.css
+++ b/src/css/blocks/newsletter.css
@@ -22,8 +22,12 @@
   & > div {
     --flow-space: 1.5em;
 
-    & > div > h2 {
+    & h2 {
       font-size: var(--font-size-fluid-2);
+    }
+
+    & summary {
+      padding: 0;
     }
 
     & > div:last-child {
