--- a/src/includes/newsletter.njk
+++ b/src/includes/newsletter.njk
@@ -1,31 +1,60 @@
-<form class="[ newsletter ]" action="http://newsletter.ellyloel.com/add_subscriber" method="post" id="revue-form" name="revue-form">
+<form
+	class="[ newsletter ]"
+  action="https://buttondown.email/api/emails/embed-subscribe/ellyloel"
+	method="post"
+>
 	<div class="[ flow ]">
-		<div>
-			<h2>Newsletter</h2>
-			<span>
-				Keep up to date with my <a href="/garden/">digital garden</a>, my <a href="/blog/">blog</a> posts, and anything else I'm working on, as well as gain access to newsletter exclusive content.
-			</span>
-			<br/>
+		<h2>Newsletter 📬</h2>
+		<p>
+			Keep up to date with my writing and bookmarking as well as anything else I'm working on. 
+		</p>
+		<p>
+			Most content will likely be related to: 👩🏼‍💻
+		</p>
+		<ul>
+			<li>HTML</li>
+			<li>CSS</li>
+			<li>A11y</li>
+			<li>SVG</li>
+			<li>Web Standards</li>
+			<li>Design Tokens</li>
+			<li>Design Systems</li>
+			<li>Web Components</li>
+		</ul>
+		<details>
+			<summary>
+				But maybe also: 🤨
+			</summary>
+			<ul>
+				<li>
+					<strong>THE</strong> queer experience</li>
+				<li>ADHD</li>
+				<li>Autism</li>
+				<li>Intersectionality</li>
+				<li>Leftist politics</li>
+			</ul>
+		</details>
+		<p>
 			<strong>
 				No spam, unsubscribe at any time.
 			</strong>
-			<br/>
+			<br>
 			<small>
 				<em>
-					By subscribing, you agree with Revue’s <a href="https://www.getrevue.co/terms">Terms of Service</a> and <a href="https://www.getrevue.co/privacy">Privacy Policy</a>.
+					<a href="https://buttondown.email">Powered by Buttondown.</a>
 				</em>
 			</small>
-		</div>
+		</p>
 		<div>
 			<div class="[ flex flex-col ]">
-				<label for="member_first_name">Name</label>
-				<input name="member[first_name]" id="member_first_name" type="text">
+				<label for="bd-name">Name</label>
+				<input type="text" name="metadata__name" id="bd-name">
 			</div>
 			<div class="[ flex flex-col ]">
-				<label for="member_email">Email</label>
-				<input name="member[email]" id="member_email" type="email">
+				<label for="bd-email">Email</label>
+				<input type="email" name="email" id="bd-email">
 			</div>
-			<button name="member[subscribe]" id="member_submit">Subscribe</button>
+			<button>✨ Subscribe ✨</button>
 		</div>
 	</div>
 </form>
