--- a/src/projects.njk
+++ b/src/projects.njk
@@ -8,6 +8,28 @@ navToHtmlOptions:
   showExcerpt: true
 ---
 
+<h2>
+  Feeds
+</h2>
+<ul>
+  <li>
+    <a href="/projects.rss">
+      <abbr title="Really Simple Syndication">RSS</abbr>
+    </a>
+  </li>
+  <li>
+    <a href="/projects.atom">Atom</a>
+  </li>
+  <li>
+    <a href="/projects.json">
+      <abbr title="JavaScript Object Notation">JSON</abbr>
+    </a>
+  </li>
+</ul>
+
+<h2>
+  Linked posts graph
+</h2>
 <div id="graph"></div>
 
 {% set projects = collections.projects | sortByCreated %}
