--- a/src/til.njk
+++ b/src/til.njk
@@ -4,11 +4,14 @@ title: TIL
 eleventyNavigation:
   key: TIL
   parent: Writing
-  order: 9
+  order: 3
 ---
 
 <dfn>Today I Learned</dfn>
 
+<h2>
+  Linked posts graph
+</h2>
 <div id="graph"></div>
 
 {% set til = collections.til | sortByCreated %}
