--- a/src/includes/footer.njk
+++ b/src/includes/footer.njk
@@ -38,7 +38,7 @@
 				</ul>
 			</div>
 
-			<ul class="[ social-links ]">
+			<ul role="list" class="[ social-links ]">
 				<li>
 					<sl-tooltip content="Elly">
 						<sl-icon-button class="[ logo-link ]" src="/assets/svg/elly.svg" label="to homepage" href="/"{% if page.url === "/" %} aria-current="page"{% endif %}></sl-icon-button>
