--- a/src/includes/newsletter.njk
+++ b/src/includes/newsletter.njk
@@ -12,10 +12,10 @@
 			Most content will likely be related to: 👩🏼‍💻
 		</p>
 		<ul>
-			<li>HTML</li>
-			<li>CSS</li>
-			<li>A11y</li>
-			<li>SVG</li>
+			<li><abbr title="HyperText Markup Language">HTML</abbr></li>
+			<li><abbr title="Cascading Style Sheets">CSS</abbr></li>
+			<li><abbr title="Accessibility">A11y</abbr></li>
+			<li><abbr title="Scalable Vector Graphics">SVG</abbr></li>
 			<li>Web Standards</li>
 			<li>Design Tokens</li>
 			<li>Design Systems</li>
@@ -28,7 +28,7 @@
 			<ul>
 				<li>
 					<strong>THE</strong> queer experience</li>
-				<li>ADHD</li>
+				<li><abbr title="Attention Deficit Hyperactivity Disorder">ADHD</abbr></li>
 				<li>Autism</li>
 				<li>Intersectionality</li>
 				<li>Leftist politics</li>
