--- a/src/layouts/base-without-header.njk
+++ b/src/layouts/base-without-header.njk
@@ -43,6 +43,7 @@
 		<script type="module" src="/@input/js/main.js" defer></script>
 		{%- if page.url === "/" -%}
 			<script type="module" src="/@input/js/model-viewer.js" defer></script>
+			<script type="module" src="/@input/js/spotify.js" defer></script>
 		{%- endif -%}
 		{%- if page.url === "/garden/" or page.url === "/blog/" or page.url === "/projects/" or page.url === "/bookmarks/" or page.url === "/til/" or page.url === "/til/d3/" -%}
 			<script type="module" src="/@input/js/graph.js" defer></script>
