--- a/src/css/blocks/home.css
+++ b/src/css/blocks/home.css
@@ -2,4 +2,44 @@
   display: flex;
   flex-direction: column;
   gap: var(--size-8);
+
+  & .about {
+    display: grid;
+    column-gap: var(--size-3);
+
+    & li {
+      max-width: revert;
+    }
+
+    & .interest-list {
+      background-color: revert;
+
+      & *:not(summary) {
+        overflow: hidden;
+      }
+
+      &,
+      & summary {
+        padding: revert;
+        margin: revert;
+      }
+
+      & summary {
+        cursor: pointer;
+        font-weight: revert;
+      }
+      &[open] summary {
+        margin-bottom: var(--flow-space);
+      }
+
+      & ul {
+        margin-left: var(--size-4);
+      }
+    }
+
+    @media (width >= 768px) {
+      grid-template-columns: 2fr 1fr;
+      row-gap: var(--size-8);
+    }
+  }
 }
