--- a/src/index.njk
+++ b/src/index.njk
@@ -11,7 +11,6 @@ description: Hi, I’m Elly. I like creating delightful, magical, and accessible
 			</span>
 			<span>I like creating <span class="stroke" style="--color: var(--accent-solid); --thickness: 1.5px;">delightful</span>, <span class="stroke" style="--color: var(--accent-solid); --thickness: 1.5px;">magical</span>, and <span class="stroke" style="--color: var(--accent-solid); --thickness: 1.5px;">accessible</span> art with code<span style="color: var(--accent-solid);">.</span></span>
 		</h1>
-
 		<div id="lego" class="[ lego-container ]">
 			<model-viewer loading="lazy" alt="A 3D modeled Lego Minifigure designed to look like myself." src="/assets/3d/me.gltf" camera-controls disable-pan disable-zoom shadow-intensity="0" exposure="0.75" shadow-softness="1" camera-orbit="31.49deg 78.9deg 98.24m" field-of-view="30deg">
 				<img id="poster" src="/assets/img/poster.webp" alt="">
@@ -19,6 +18,110 @@ description: Hi, I’m Elly. I like creating delightful, magical, and accessible
 			</model-viewer>
 		</div>
 	</header>
+
+	<article class="[ about ]">
+		<ul role="list" class="[ flow ]">
+			<li>
+				<details-utils animate>
+					<details class="[ interest-list ]">
+						<summary>
+							I'm a design engineer with a strong interest in and passion for...
+						</summary>
+						<ul role="list" class="[ flow ]">
+							<li>
+								<sl-icon class="[ icon ]" library="fa" name="fab-html5"></sl-icon>
+								<abbr title="HyperText Markup Language">HTML</abbr>
+							</li>
+							<li>
+								<sl-icon class="[ icon ]" library="fa" name="fab-css3-alt"></sl-icon>
+								<abbr title="Cascading Style Sheets">CSS</abbr>
+							</li>
+							<li>
+								<sl-icon class="[ icon ]" library="fa" name="fas-universal-access"></sl-icon>
+								<abbr title="Accessibility">A11y</abbr>
+							</li>
+							<li>
+								<sl-icon class="[ icon ]" library="fa" name="fas-pen-nib"></sl-icon>
+								<abbr title="Scalable Vector Graphics">SVG</abbr>
+							</li>
+							<li>
+								<sl-icon class="[ icon ]" library="fa" name="fas-code"></sl-icon>
+						Web Standards
+					</li>
+							<li>
+								<sl-icon class="[ icon ]" library="fa" name="fas-gears"></sl-icon>
+						Design Tokens
+					</li>
+							<li>
+								<sl-icon class="[ icon ]" library="fa" name="fas-cubes"></sl-icon>
+						Design Systems</li>
+							<li>
+								<sl-icon class="[ icon ]" library="fa" name="fas-cube"></sl-icon>
+						Web Components
+					</li>
+						</ul>
+					</details>
+				</details-utils>
+			</li>
+			<li>
+				🏳️‍⚧️ I'm an incredibly queer pansexual trans woman.
+			</li>
+			<li>
+				🧠 I'm an AuDHD (autistic and <a href="/notes/adhd"><abbr title="Attention Deficit Hyperactivity Disorder">ADHD</abbr></a>) neurodivergent.
+			</li>
+			<li>
+				🐈‍⬛ I have a little rascal of a cat named <a href="/lulu">Lulu</a>, who I love to bits.
+			</li>
+			<li>
+				📺 I love all kinds of animation (anime, cartoons, etc.).
+			</li>
+			<li>
+				🌏 I live on the edge of Bunurong and Wurundjeri Country, near Naarm (Melbourne), Australia.
+			</li>
+			<li class="[ spotify-playing ]">
+				🎵 The last song I listened to was "<a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="song">Never Gonna Give You Up</a>" by <em class="artist">Rick Astley</em>.
+			</li>
+		</ul>
+		<div class="[ flow ]">
+			<h2>Find me on:</h2>
+			<ul class="[ social-links ][ flow ]">
+				<li>
+					<a href="https://twitter.ellyloel.com" class="[ text-decoration-none move-link-styling-to-child ]">
+						<sl-icon class="[ icon ]" library="fa" name="fab-twitter"></sl-icon>
+						<del datetime="2022-11-18" cite="https://twitter.ellyloel.com/1593505830347100160/">
+							<span>Twitter</span>
+						</del>
+					</a>
+				</li>
+				<li>
+					<a href="https://front-end.social/@elly" class="[ text-decoration-none move-link-styling-to-child ]">
+						<sl-icon class="[ icon ]" library="fa" name="fab-mastodon"></sl-icon>
+						<ins datetime="2022-11-18" cite="https://twitter.ellyloel.com/1593505830347100160/">
+							<span>Mastodon</span>
+						</ins>
+					</a>
+				</li>
+				<li>
+					<a href="https://elly.to/linkedin" class="[ text-decoration-none move-link-styling-to-child ]">
+						<sl-icon class="[ icon ]" library="fa" name="fab-linkedin"></sl-icon>
+						<span>LinkedIn</span>
+					</a>
+				</li>
+				<li>
+					<a href="https://elly.to/codepen" class="[ text-decoration-none move-link-styling-to-child ]">
+						<sl-icon class="[ icon ]" library="fa" name="fab-codepen"></sl-icon>
+						<span>Codepen</span>
+					</a>
+				</li>
+				<li>
+					<a href="https://elly.to/dribbble" class="[ text-decoration-none move-link-styling-to-child ]">
+						<sl-icon class="[ icon ]" library="fa" name="fab-dribbble"></sl-icon>
+						<span>Dribble</span>
+					</a>
+				</li>
+			</ul>
+		</div>
+	</article>
 
 	{%- feedBlock title = "Recent posts" -%}
 	{%- set recentPostTitles = [] -%}
